--- a/app/src/main/res/layout/component_quote_information.xml
+++ b/app/src/main/res/layout/component_quote_information.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_gravity="center"
     android:gravity="center"
     android:orientation="vertical">
@@ -20,6 +21,12 @@
         android:text="@string/label_value"
         android:textSize="32sp"
         android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/lbl_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/label_date" />
 
     <include
         layout="@layout/component_button_refresh"
